--- a/project/app/templates/matchpoint-table-partial.html
+++ b/project/app/templates/matchpoint-table-partial.html
@@ -1,20 +1,5 @@
 {% load partials %}
+{% load render_table from django_tables2 %}
 {% partialdef matchpoint-table-partial %}
-<table class="table caption-top">
-    <caption>{{ title }}</caption>
-    <thead>
-        <tr>
-            <th>Partnership</th>
-            <th>Matchpoints</th>
-        </tr>
-    </thead>
-    <tbody class="table-group-divider">
-        {% for pairname, tuple in pairs.items %}
-            <tr {% if pairname == viewers_pair %}class="table-warning"{% endif %}>
-                <th>{{ pairname }}</th>
-                <td>{{ tuple.0 }} ({{ tuple.1 | floatformat:0 }}%)</td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% render_table matchpoint_score_table %}
 {% endpartialdef matchpoint-table-partial %}
