--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -13,7 +13,8 @@
                 Bridge
             {% endblock title %}
         </title>
-        <link href="{% static "app/bootstrap-5.3.3-dist/css/bootstrap.min.css" %}" rel="stylesheet">
+        <link href="{% static "app/bootstrap-5.3.3-dist/css/bootstrap.min.css" %}"
+              rel="stylesheet">
         <link href="{% static "app/bridge.css" %}" rel="stylesheet">
         <link rel="icon" type="image/png" href="{% static "app/spadesuit.png" %}" />
     </head>
