Fix breakage from ...
    commit f4cb2e01e4cb35b9e3487e5fbe5856cce54a69a8
    Author: Eric Hanchrow <eric.hanchrow@gmail.com>
    Date:   2025-04-26 13:23:52 -0400

        Use <time> instead of <span> in a few places

... and while we're at it, localize the displayed time

--- a/project/app/templates/tournament_list.html
+++ b/project/app/templates/tournament_list.html
@@ -68,6 +68,9 @@ function updateDurations() {
          var innards = span.innerHTML;
          var then = new Date (innards);
          var durationMS = then - now ;
+
+         span.innerHTML = span.innerHTML.toLocaleString();
+
          var suffix = " from now";
          if (durationMS < 0) {
             durationMS *= -1;
@@ -79,7 +82,7 @@ function updateDurations() {
           + ")";
       };
 
-      isos = document.querySelectorAll("span.isoformat");
+      isos = document.querySelectorAll("time.isoformat");
       isos.forEach (clobberSibling);
     }
 setInterval(updateDurations, 1000);
