More or less copy the example from developer.mozilla.org
Ugly, but it works.

--- a/project/app/templates/hand_xpermiment.html
+++ b/project/app/templates/hand_xpermiment.html
@@ -5,5 +5,20 @@
     IT'S THE BIG HAND EXPERIMENT
 {% endblock title %}
 {% block content %}
-    Whatchoo lookin' at?
+    {# from https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_overflow/CSS_carousels#carousel_with_single_pages #}
+    <h1>CSS carousel single item per page</h1>
+    <ul class="carousel">
+        <li class="carousel">
+            <h2>Page 1</h2>
+        </li>
+        <li class="carousel">
+            <h2>Page 2</h2>
+        </li>
+        <li class="carousel">
+            <h2>Page 3</h2>
+        </li>
+        <li class="carousel">
+            <h2>Page 4</h2>
+        </li>
+    </ul>
 {% endblock content %}
