--- a/project/app/static/app/bridge.css
+++ b/project/app/static/app/bridge.css
@@ -49,3 +49,88 @@ body {
 .humanize-me {
     font-family: monospace;
 }
+
+/* From https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_overflow/CSS_carousels#carousel_with_single_pages */
+ul.carousel {
+  width: 90vw;
+  height: 300px;
+  padding: 20px 100px 20px 20px;
+  display: flex;
+  gap: 4vw;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  anchor-name: --myCarousel;
+  scroll-marker-group: after;
+}
+
+ul.carousel::scroll-marker-group {
+  position: absolute;
+  position-anchor: --myCarousel;
+  top: calc(anchor(bottom) - 70px);
+  justify-self: anchor-center;
+
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+ul.carousel::scroll-button(*) {
+  border: 0;
+  font-size: 2rem;
+  background: none;
+  color: rgb(0 0 0 / 0.7);
+  cursor: pointer;
+  position: absolute;
+  position-anchor: --myCarousel;
+}
+
+ul.carousel::scroll-button(*):hover,
+ul.carousel::scroll-button(*):focus {
+  color: rgb(0 0 0 / 1);
+}
+
+ul.carousel::scroll-button(*):active {
+  translate: 1px 1px;
+}
+
+ul.carousel::scroll-button(*):disabled {
+  color: rgb(0 0 0 / 0.2);
+  cursor: unset;
+}
+
+ul.carousel::scroll-button(left) {
+  content: "◄";
+  right: calc(anchor(left) - 70px);
+  bottom: calc(anchor(top) + 13px);
+}
+
+ul.carousel::scroll-button(right) {
+  content: "►";
+  left: calc(anchor(right) - 70px);
+  bottom: calc(anchor(top) + 13px);
+}
+
+li.carousel {
+  list-style-type: none;
+  background-color: #eee;
+  border: 1px solid #ddd;
+  padding: 20px;
+
+  flex: 0 0 100%;
+  scroll-snap-align: center;
+}
+
+li.carousel:nth-child(even) {
+  background-color: cyan;
+}
+li.carousel::scroll-marker {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-color: transparent;
+  border: 2px solid black;
+  border-radius: 50%;
+}
+li.carousel::scroll-marker:target-current {
+  background-color: black;
+}
