Add a non-carousel "ul", just to ensure I haven't hosed them

--- a/project/app/templates/hand_xpermiment.html
+++ b/project/app/templates/hand_xpermiment.html
@@ -6,7 +6,12 @@
 {% endblock title %}
 {% block content %}
     {# from https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_overflow/CSS_carousels#carousel_with_single_pages #}
-    <h1>CSS carousel single item per page</h1>
+    <h2>Just a plain list</h2>
+    <ul>
+        <li>Bada</li>
+        <li>Bing</li>
+    </ul>
+    <h2>CSS carousel single item per page</h2>
     <ul class="carousel">
         <li class="carousel">
             <h2>Page 1</h2>
