Idea for moving the hand HTML to a separate file.
Actually looks reasonable at first glance.

--- a/project/app/static/app/bridge.css
+++ b/project/app/static/app/bridge.css
@@ -1,3 +1,7 @@
+* {
+    outline: 1px solid red;
+}
+
 /* from https://www.perplexity.ai/search/in-bootstrap-how-can-i-use-the-Tp82tQ57R3emdSxPG.c79g */
 .inactive-button {
   pointer-events: none;
