--- a/project/app/templates/hand_xpermiment.html
+++ b/project/app/templates/hand_xpermiment.html
@@ -17,13 +17,10 @@
         {% endifexists %}
     </li>
     <li class="carousel">
-        <h2>Page 2</h2>
+        <h2>Dummy</h2>
     </li>
     <li class="carousel">
-        <h2>Page 3</h2>
-    </li>
-    <li class="carousel">
-        <h2>Page 4</h2>
+        <h2>Current Trick</h2>
     </li>
 </ul>
 {% endblock content %}
