--- a/project/app/static/app/bridge.css
+++ b/project/app/static/app/bridge.css
@@ -57,7 +57,7 @@ body {
 /* From https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_overflow/CSS_carousels#carousel_with_single_pages */
 ul.carousel {
   width: 90vw;
-  height: 300px;
+  height: 500px;
   padding: 20px 100px 20px 20px;
   display: flex;
   gap: 4vw;
@@ -129,6 +129,7 @@ li.carousel::scroll-marker:target-current {
 
 .spades, .hearts, .diamonds, .clubs {
     display: flex;
+    font-family: monospace;
     font-size: 5cqh;
     flex-direction: row;
     align-items: center;
