Add a stub URL that displays just the new 3x3-trick-display

--- a/project/app/static/app/bridge.css
+++ b/project/app/static/app/bridge.css
@@ -154,3 +154,7 @@ li.carousel::scroll-marker:target-current {
 li h2 {
     text-align: center;
 }
+
+.3x3-trick-display {
+    outline: 1px solid red;
+}
