--- a/project/app/templates/3x3-trick-display.html
+++ b/project/app/templates/3x3-trick-display.html
@@ -1,8 +1,9 @@
+{% extends "base.html" %}
 {% load fastdev %}
-<div style="display: grid; grid-template-columns: auto auto auto;">
-    {% for row in three_by_three_trick_display.rows %}
-        {% for column in row %}
-            <div {% if column != " " %}style="border: 1px dotted; text-align: center;"{% endif %}>{{ column|safe }}</div>
+{% block content %}
+    <div class="3x3-trick-display">
+        {% for row in three_by_three_trick_display.rows %}
+            {% for column in row %}<div>{{ column|safe }}</div>{% endfor %}
         {% endfor %}
-    {% endfor %}
-</div>
+    </div>
+{% endblock content %}
