--- a/project/app/templates/hand_xpermiment.html
+++ b/project/app/templates/hand_xpermiment.html
@@ -6,20 +6,24 @@
 {% endblock title %}
 {% block content %}
     {# from https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_overflow/CSS_carousels#carousel_with_single_pages #}
-    <h1 style="text-align:center">{{ terse_description }}</h1>
+    <h3 style="text-align:center">{{ terse_description }}</h3>
+    <div style="display: flex; justify-content: space-between;">
+        <h1>{{ hand.auction.status }}</h1>
+        <h1>{{ hand.trick_counts_by_direction }}</h1>
+    </div>
     <ul class="carousel">
         <li class="carousel">
             {% ifexists card_display.current_player %}
-            <h2>Your Hand</h2>
-            {% include "hand-div.html" with cards=card_display.current_player.cards id="" %}
+            <h2>Your Hand ({{ viewers_seat }})</h2>
+            {% include "hand-div.html" with cards=card_display.current_player.cards id=viewers_seat.name %}
         {% else %}
             No <tt>card_display.current_player</tt> for you
         {% endifexists %}
     </li>
     <li class="carousel">
-        <h2>Dummy</h2>
+        <h2>Dummy ({{ dummy_player }})</h2>
         {% ifexists card_display.dummy_hand %}
-        {% include "hand-div.html" with cards=card_display.dummy_hand.cards id="" %}
+        {% include "hand-div.html" with cards=card_display.dummy_hand.cards id=dummy_player.seat.name %}
     {% else %}
         No <tt>card_display.dummy</tt> for you
     {% endifexists %}
@@ -37,6 +41,11 @@
 {% endifexists %}
 </li>
 </ul>
+<style>
+div#{{ next_seat_to_play|title }}.hand {
+  background-color: lightgreen;
+}
+</style>
 {% endblock content %}
 {% block upper-right-column %}
     {% if DEPLOYMENT_ENVIRONMENT != "production" %}
