Use the big font for the hands, not just the trick

--- a/project/app/templates/hand-div.html
+++ b/project/app/templates/hand-div.html
@@ -1,5 +1,5 @@
 {% load fastdev %}
-<div class="hand" id="{{ id }}">
+<div class="{{ class }}" id="{{ id }}">
     <div class="spades">
         {% for c in cards.Spades %}<div>{{ c }}</div>{% endfor %}
     </div>
