--- a/project/app/templates/hand_xpermiment.html
+++ b/project/app/templates/hand_xpermiment.html
@@ -15,7 +15,7 @@
         <li class="carousel">
             {% ifexists card_display.current_player %}
             <h2>Your Hand ({{ viewers_seat }})</h2>
-            {% include "hand-div.html" with cards=card_display.current_player.cards id=viewers_seat.name %}
+            {% include "hand-div.html" with cards=card_display.current_player.cards id=viewers_seat.name class="hand bigfont" %}
         {% else %}
             No <tt>card_display.current_player</tt> for you
         {% endifexists %}
@@ -23,7 +23,7 @@
     <li class="carousel">
         <h2>Dummy ({{ dummy_player }})</h2>
         {% ifexists card_display.dummy_hand %}
-        {% include "hand-div.html" with cards=card_display.dummy_hand.cards id=dummy_player.seat.name %}
+        {% include "hand-div.html" with cards=card_display.dummy_hand.cards id=dummy_player.seat.name class="hand bigfont" %}
     {% else %}
         No <tt>card_display.dummy</tt> for you
     {% endifexists %}
