Nix the "Roboto" font -- it's not buying me anything

--- a/project/app/static/app/bridge.css
+++ b/project/app/static/app/bridge.css
@@ -123,7 +123,7 @@ li.carousel::scroll-marker:target-current {
 }
 
 .bigfont {
-    font-family: "Roboto Mono", monospace;
+    font-family: monospace;
     font-optical-sizing: auto;
     font-weight: 100;
     font-style: normal;
