hand_archive.html: Make the hands scrollable

--- a/project/app/templates/hand_archive.html
+++ b/project/app/templates/hand_archive.html
@@ -9,7 +9,7 @@
         <h2>{{ hand.auction.status }}</h2>
         <h1>{{ score }}</h1>
     </div>
-    <div>{% include "four-hands.html" %}</div>
+    <div style="display: flex; justify-content: center; overflow: auto; ">{% include "four-hands.html" %}</div>
     <div style="display: flex;">
         <div style="flex-grow: 1">{% include "auction.html" %}</div>
     </div>
