--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -32,56 +32,14 @@
     {% if not show_auction_history %}
         <div class="col">{% include "four-hands.html" %}</div>
     {% endif %}
-    <div id="toast-and-bidding-box">
-        <div class="toast-container">
-            <div id="errorToast"
-                 class="toast"
-                 role="alert"
-                 aria-live="assertive"
-                 aria-atomic="true">
-                <div class="toast-header">
-                    <svg class="bd-placeholder-img rounded me-2"
-                         width="20"
-                         height="20"
-                         xmlns="http://www.w3.org/2000/svg"
-                         aria-hidden="true"
-                         preserveAspectRatio="xMidYMid slice"
-                         focusable="false">
-                        <rect width="100%" height="100%" fill="#007aff"></rect>
-                    </svg>
-                    <strong class="me-auto">Uh oh</strong>
-                    <small>You're in trouble now</small>
-                    <button type="button"
-                            class="btn-close"
-                            data-bs-dismiss="toast"
-                            aria-label="Close"></button>
-                </div>
-                <div class="toast-body" id="errorText">OK, so, like, that didn't work.</div>
-            </div>
-        </div>
-        <div style="font-family: monospace;
-                    display: grid;
-                    grid-template-columns: auto auto"
-             id="bidding-box">
-            <div id="make-me-a-li">
-                {% if display_bidding_box %}{{ bidding_box_buttons }}{% endif %}
-            </div>
-            <div>
-                {% if show_auction_history %}
-                    {% ifexists card_display.current_player %}
-                    {% include "hand-div.html" with cards=card_display.current_player.cards id="" class="hand" %}
-                {% endifexists %}
-            {% endif %}
-        </div>
-    </div>
-</div>
-{% ifexists card_display.current_player %}
+    {% include "carousel_style_auction.html" %}
+    {% ifexists card_display.current_player %}
 {% else %}
-{% ifexists hand_at_which_I_played_this_board %}
-<h4>
-    You played <a href="{% url 'app:board-archive' pk=hand.board.pk %}">this board</a>
-    at <a href="{{ hand_at_which_I_played_this_board.link }}">{{ hand_at_which_I_played_this_board.description }}</a>.
-</h4>
+    {% ifexists hand_at_which_I_played_this_board %}
+    <h4>
+        You played <a href="{% url 'app:board-archive' pk=hand.board.pk %}">this board</a>
+        at <a href="{{ hand_at_which_I_played_this_board.link }}">{{ hand_at_which_I_played_this_board.description }}</a>.
+    </h4>
 {% endifexists %}
 {% if show_auction_history %}
     <div id="four-hands">{% include "four-hands.html" %}</div>
@@ -106,33 +64,33 @@
 {% endblock upper-right-column %}
 {% block scripts %}
     <script>
-var handEventSource = new ReconnectingEventSource('/events/hand/{{ hand.pk }}/');
-console.log("Listening for hand events on {{ hand.pk }}");
+ var handEventSource = new ReconnectingEventSource('/events/hand/{{ hand.pk }}/');
+ console.log("Listening for hand events on {{ hand.pk }}");
 
-handEventSource.addEventListener('message', function (e) {
-    console.log("Hand event listener saw " + e.data);
+ handEventSource.addEventListener('message', function (e) {
+     console.log("Hand event listener saw " + e.data);
 
-    window.location.reload();
-}, false);
+     window.location.reload();
+ }, false);
 
-// scroll the auction div so that the most-recent calls are visible.
-addEventListener("DOMContentLoaded", (event) =>
-    {
-        var auctionDiv = document.querySelector("#auction");
-        if (auctionDiv != null) {
-            auctionDiv.scroll(0, 10000);
-        }
-    });
+ // scroll the auction div so that the most-recent calls are visible.
+ addEventListener("DOMContentLoaded", (event) =>
+     {
+         var auctionDiv = document.querySelector("#auction");
+         if (auctionDiv != null) {
+             auctionDiv.scroll(0, 10000);
+         }
+ });
 
-htmx.on("htmx:responseError", function(evt) {
-  const errorToast = document.getElementById('errorToast');
-  const toastBootstrap = bootstrap.Toast.getOrCreateInstance(errorToast);
+ htmx.on("htmx:responseError", function(evt) {
+     const errorToast = document.getElementById('errorToast');
+     const toastBootstrap = bootstrap.Toast.getOrCreateInstance(errorToast);
 
-  const errorText = document.getElementById('errorText');
-  errorText.innerHTML = evt.detail.xhr.responseText;
+     const errorText = document.getElementById('errorText');
+     errorText.innerHTML = evt.detail.xhr.responseText;
 
-  toastBootstrap.show();
-});
+     toastBootstrap.show();
+ });
 
     </script>
 {% endblock scripts %}
