--- a/project/app/templates/carousel_style_auction.html
+++ b/project/app/templates/carousel_style_auction.html
@@ -1,37 +1,7 @@
 {% load fastdev %}
 {% load player_extras %}
 <ul class="carousel">
-    <li class="carousel">
-        <table class="table caption-top"
-               id="auction"
-               style="border: 1px dotted;
-                      overflow: auto;
-                      height: 10em">
-            <caption>Auction</caption>
-            <thead>
-                <tr>
-                    {% for direction, player in history %}
-                        <th {{ player.style|safe }}>
-                            <i>{{ direction }}</i>
-                            <br>
-                            {{ player.player|styled_link:user }}
-                        </th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody class="table-group-divider">
-                {% for row in hand.auction.fancy_HTML_display %}
-                    <tr>
-                        {% for call in row %}
-                            <td>
-                                {% if call is not None %}{{ call|safe }}{% endif %}
-                            </td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </li>
+    <li class="carousel">{% include "auction.html" %}</li>
     <li class="carousel">
         <div id="toast-bidding-box">
             <div class="toast-container">
