Completely throw away the old "legacy" view
... TODO: update our hand, and the dummy's hand, as needed

--- a/project/app/templates/3x3-trick-display.html
+++ b/project/app/templates/3x3-trick-display.html
@@ -1,6 +1,10 @@
 {% load fastdev %}
-<div class="three-by-three-trick-display">
+<div class="three-by-three-trick-display"
+     style="display: grid;
+            grid-template-columns: auto auto auto">
     {% for row in three_by_three_trick_display.rows %}
-        {% for column in row %}{{ column|safe }}{% endfor %}
+        {% for column in row %}
+            <div {% if column != " " %}style="border: 1px dotted; text-align: center;"{% endif %}>{{ column|safe }}</div>
+        {% endfor %}
     {% endfor %}
 </div>
