--- a/project/app/templates/hand_detail.html
+++ b/project/app/templates/hand_detail.html
@@ -2,49 +2,44 @@
 {% load fastdev %}
 {% load static %}
 {% block title %}
-    {{ hand }}
+    IT'S THE BIG HAND EXPERIMENT
 {% endblock title %}
 {% block content %}
-    <div id="big-descriptive-text">
-        <div id="more-big-descriptive-text"
-             {% if hand.is_abandoned %}style="text-decoration-line: line-through;"{% endif %}>
-            <div id="hand-terse-description">
-                <h1 style="text-align:center">{{ terse_description }}</h1>
-            </div>
-            <div id="hand-status" class="row">
-                <div class="col">
-                    <h1>
-                        <div id="auction-summary">{{ hand.auction.status }}</div>
-                    </h1>
-                </div>
-                <div class="col">
-                    <h1>{{ hand.trick_counts_by_direction }}</h1>
-                </div>
-            </div>
-        </div>
-        {% if hand.is_abandoned %}
-            <div>
-                <h1 style="text-align: center; color: red">This hand was abandoned: {{ hand.abandoned_because }}</h1>
-            </div>
-        {% endif %}
+    {# from https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_overflow/CSS_carousels#carousel_with_single_pages #}
+    <h3 style="text-align:center">{{ terse_description }}</h3>
+    <div style="display: flex; justify-content: space-between;">
+        <h1>{{ hand.auction.status }}</h1>
+        <h1>{{ hand.trick_counts_by_direction }}</h1>
     </div>
-    {% if not show_auction_history %}
-        <div class="col">{% include "four-hands.html" %}</div>
+    <ul class="carousel">
+        <li class="carousel">
+            {% ifexists card_display.current_player %}
+            <h2>Your Hand ({{ viewers_seat }})</h2>
+            {% include "hand-div.html" with cards=card_display.current_player.cards id=viewers_seat.name class="hand bigfont" %}
+        {% else %}
+            No <tt>card_display.current_player</tt> for you
+        {% endifexists %}
+    </li>
+    <li class="carousel">
+        <h2>Dummy ({{ dummy_player }})</h2>
+        {% ifexists card_display.dummy_hand %}
+        {% include "hand-div.html" with cards=card_display.dummy_hand.cards id=dummy_player.seat.name class="hand bigfont" %}
     {% else %}
-        {% include "carousel_style_auction.html" %}
-    {% endif %}
-    {% ifexists card_display.current_player %}
-{% else %}
-    {% ifexists hand_at_which_I_played_this_board %}
-    <h4>
-        You played <a href="{% url 'app:board-archive' pk=hand.board.pk %}">this board</a>
-        at <a href="{{ hand_at_which_I_played_this_board.link }}">{{ hand_at_which_I_played_this_board.description }}</a>.
-    </h4>
+        No <tt>card_display.dummy</tt> for you
+    {% endifexists %}
+</li>
+<li class="carousel">
+    <h2>Current Trick</h2>
+    {% ifexists three_by_three_trick_display %}
+    <div id="_3x3-container">{% include "3x3-trick-display.html" %}</div>
 {% endifexists %}
-{% if show_auction_history %}
-    <div id="four-hands">{% include "four-hands.html" %}</div>
-{% endif %}
-{% endifexists %}
+</li>
+</ul>
+<style>
+div#{{ next_seat_to_play|title }}.hand {
+  background-color: lightgreen;
+}
+</style>
 {% endblock content %}
 {% block upper-right-column %}
     {% if DEPLOYMENT_ENVIRONMENT != "production" %}
@@ -64,43 +59,41 @@
 {% endblock upper-right-column %}
 {% block scripts %}
     <script>
- var handEventSource = new ReconnectingEventSource('/events/hand/{{ hand.pk }}/');
- console.log("Listening for hand events on {{ hand.pk }}");
+     var handEventSource = new ReconnectingEventSource('/events/hand/{{ hand.pk }}/');
+     console.log("Listening for hand events on {{ hand.pk }}");
 
- handEventSource.addEventListener('message', function (e) {
-     console.log("Hand event listener saw " + e.data);
+     handEventSource.addEventListener('message', function (e) {
+         console.log("Hand event listener saw " + e.data);
 
-     const data = JSON.parse(e.data);
-     if ("new-play" in data) {
-         const new_play = data["new-play"];
-         if ("trick_html" in new_play) {
-             const trick_html = new_play["trick_html"];
-             const container = document.getElementById("_3x3-container");
-             container.innerHTML = trick_html;
+         const data = JSON.parse(e.data);
+         if ("new-play" in data) {
+             const new_play = data["new-play"];
+             if ("trick_html" in new_play) {
+                 const trick_html = new_play["trick_html"];
+                 const container = document.getElementById("_3x3-container");
+                 container.innerHTML = trick_html;
+             }
          }
-     } else {
-     window.location.reload();
-     }
- }, false);
+     }, false);
 
- // scroll the auction div so that the most-recent calls are visible.
- addEventListener("DOMContentLoaded", (event) =>
-     {
-         var auctionDiv = document.querySelector("#auction");
-         if (auctionDiv != null) {
-             auctionDiv.scroll(0, 10000);
-         }
- });
+     // scroll the auction div so that the most-recent calls are visible.
+     addEventListener("DOMContentLoaded", (event) =>
+         {
+             var auctionDiv = document.querySelector("#auction");
+             if (auctionDiv != null) {
+                 auctionDiv.scroll(0, 10000);
+             }
+     });
 
- htmx.on("htmx:responseError", function(evt) {
+     htmx.on("htmx:responseError", function(evt) {
          const errorToast = document.getElementById('errorToast');
-     const toastBootstrap = bootstrap.Toast.getOrCreateInstance(errorToast);
+         const toastBootstrap = bootstrap.Toast.getOrCreateInstance(errorToast);
 
-     const errorText = document.getElementById('errorText');
-     errorText.innerHTML = evt.detail.xhr.responseText;
+         const errorText = document.getElementById('errorText');
+         errorText.innerHTML = evt.detail.xhr.responseText;
 
-     toastBootstrap.show();
- });
+         toastBootstrap.show();
+     });
 
     </script>
 {% endblock scripts %}
